@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-26T02:27:05Z",
+  "timestamp" : "2022-07-26T16:32:53Z",
   "count_outdated" : 694,
   "uniques_outdated" : 360,
-  "count" : 718,
+  "count" : 717,
   "uniques" : 374,
   "clones" : [
     {
       "timestamp": "2022-07-12T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
