@@ -1,3 +1,10 @@
+2022-07-26T16:32:53Z:
+* notice: last 14d: unq all: 4 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 360 694 / 374 718
+* notice: next accum: outdated-unq outdated-all / unq all: 360 694 / 374 717
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-12]
+
 2022-07-26T02:27:05Z:
 * notice: last 14d: unq all: 4 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 359 692 / 374 717
